fix: z-index do botao de sim

--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -7,6 +7,7 @@
     cursor: pointer;
     background-color: #7d2ae8;
     transition: all 0.2s ease;
+    z-index: 10;
   }
   
   .button:active {
